--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,23 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.39",
+    "@langchain/google-genai": "^0.1.8",
+    "@langchain/langgraph": "^0.2.45",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tavily/core": "^0.0.3",
     "bcrypt": "^5.1.1",
+    "chromadb": "^1.10.4",
+    "chromadb-default-embed": "^2.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
+    "exa-js": "^1.4.10",
     "jose": "^5.9.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
@@ -25,8 +34,10 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
